2007-05-11  Shawn Betts  <sabetts@shitbender.gagrod>

	* stumpwm.asd (:stumpwm): use :serial dependencies

	* stumpwm.lisp (stumpwm-internal-loop): don't ungrab the keyboard
	when entering the debugger.

2007-05-10  Shawn Betts  <sabetts@shitbender.gagrod>

	* core.lisp (:key-press): ungrab the keyboard after reading the key.

2007-05-10  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (handle-keymap): don't grab the keyboard
	(:key-press): grab the keyboard at the beginning. ungrab it at the
	very end. call allow-events after grabbing.

	* user.lisp (eval-line): dont take screen arg. callers updated.

2007-05-09  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (:configure-request): more verbose debug output
	(grab-keyboard): likwise
	(ungrab-keyboard): likwise
	(:focus-out): new event handler

2007-05-07  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp (eval-line): print all values
	(columnize): new function
	(display-keybinding): print prefix keys. print bindings in columns
	("reload"): properly notify when asdf isn't loaded

	* primitives.lisp (*suppress-abort-messages*): new global
	(concat): new defun

	* kmap.lisp (search-kmap): match command before checking if its a kmap

	* user.lisp ("windowlist"): properly tell the user when there are
	no managed windows.
	(argument-pop-or-read): throw :abort
	(argument-pop-rest-or-read): likewise
	(:frame): likewise
	("colon"): likewise
	("windowlist"): likewise
	(parse-and-run-command): likewise
	(interactive-command): echo "Abort." for aborted commands unless *suppress-echo-timeout* is on.
	(display-keybinding): use message-no-timeout

	* input.lisp (*input-map*): bind ESC to input-abort

2007-05-06  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp ("gnew"): check if group exists
	("gnewbg"): likewise

	* input.lisp (input-find-completions): make sure the symbol is fboundp

	* core.lisp (find-group): new function

2007-05-05  Shawn Betts  <sabetts@shitbender.gagrod>
